; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_gholder.c_add_host_child_to_holder.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_gholder.c_add_host_child_to_holder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i64, i32, %struct.TYPE_8__*, i32 }
%struct.TYPE_8__ = type { i8*, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i8* }

@gdns_thread = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@MTRC_ID_HOSTNAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*)* @add_host_child_to_holder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_host_child_to_holder(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %8 = call i8* (...) @new_gsublist()
  store i8* %8, i8** %4, align 8
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 2
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 1
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %5, align 8
  store i8* null, i8** %6, align 8
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %21 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  store i32 %22, i32* %7, align 4
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %24 = load i8*, i8** %4, align 8
  %25 = call i32 @set_host_sub_list(%struct.TYPE_9__* %23, i8* %24)
  %26 = call i32 @pthread_mutex_lock(i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @gdns_thread, i32 0, i32 0))
  %27 = load i8*, i8** %5, align 8
  %28 = call i8* @ht_get_hostname(i8* %27)
  store i8* %28, i8** %6, align 8
  %29 = call i32 @pthread_mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @gdns_thread, i32 0, i32 0))
  %30 = load i8*, i8** %6, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %35, label %32

32:                                               ; preds = %1
  %33 = load i8*, i8** %5, align 8
  %34 = call i32 @dns_resolver(i8* %33)
  br label %64

35:                                               ; preds = %1
  %36 = load i8*, i8** %6, align 8
  %37 = icmp ne i8* %36, null
  br i1 %37, label %38, label %63

38:                                               ; preds = %35
  %39 = load i8*, i8** %6, align 8
  %40 = load i32, i32* @MTRC_ID_HOSTNAME, align 4
  %41 = call i32 @set_host_child_metrics(i8* %39, i32 %40, i32** %3)
  %42 = load i8*, i8** %4, align 8
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %44 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %43, i32 0, i32 3
  %45 = load i32, i32* %44, align 8
  %46 = load i32*, i32** %3, align 8
  %47 = call i32 @add_sub_item_back(i8* %42, i32 %45, i32* %46)
  %48 = load i8*, i8** %4, align 8
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %50 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %49, i32 0, i32 2
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %50, align 8
  %52 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %53 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i64 %54
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %55, i32 0, i32 0
  store i8* %48, i8** %56, align 8
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %58 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %57, i32 0, i32 1
  %59 = load i32, i32* %58, align 8
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %58, align 8
  %61 = load i8*, i8** %6, align 8
  %62 = call i32 @free(i8* %61)
  br label %63

63:                                               ; preds = %38, %35
  br label %64

64:                                               ; preds = %63, %32
  %65 = load i32, i32* %7, align 4
  %66 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %67 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %66, i32 0, i32 1
  %68 = load i32, i32* %67, align 8
  %69 = icmp eq i32 %65, %68
  br i1 %69, label %70, label %73

70:                                               ; preds = %64
  %71 = load i8*, i8** %4, align 8
  %72 = call i32 @free(i8* %71)
  br label %73

73:                                               ; preds = %70, %64
  ret void
}

declare dso_local i8* @new_gsublist(...) #1

declare dso_local i32 @set_host_sub_list(%struct.TYPE_9__*, i8*) #1

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i8* @ht_get_hostname(i8*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @dns_resolver(i8*) #1

declare dso_local i32 @set_host_child_metrics(i8*, i32, i32**) #1

declare dso_local i32 @add_sub_item_back(i8*, i32, i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
